--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "dependencies": {
     "body-parser": "^1.9.2",
-    "express": "^4.10.1",
+    "express": "^4.14.0",
     "morgan": "^1.4.1",
-    "mysql": "^2.4.2",
+    "mysql": "^2.11.1",
     "request": "^2.69.0",
     "sequelize": "^3.21.0"
   },
@@ -29,12 +29,21 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-register": "^6.7.2",
     "chai": "^3.5.0",
-    "eslint-config-hackreactor": "git://github.com/hackreactor-labs/eslint-config-hackreactor",
+    "eslint-config-hackreactor": "git://github.com/hackreactor-labs/eslint-config-hackreactor.git",
     "mocha": "^2.4.5"
   },
   "babel": {
     "presets": [
       "es2015"
     ]
-  }
+  },
+  "main": "app.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mofthecross/2016-06-databases.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mofthecross/2016-06-databases/issues"
+  },
+  "homepage": "https://github.com/mofthecross/2016-06-databases#readme"
 }
